<resources>
    <!-- "android:label"s -->
    <string name="app_name">ToDo</string>
    <string name="app_fragment_main_name">ToDo: Main Menu</string>
    <string name="app_fragment_add_task_name">ToDo: Add Task</string>

    <!-- Fragment Main -->
    <string name="fragment_main_empty_indicator_text_view">All done! There are no tasks</string>
    <string name="fragment_main_add_task">Add Task</string>

    <!-- Fragment CreateTask -->
    <string name="fragment_add_task_title">Add a Task</string>
    <string name="fragment_add_task_label">Add Task</string>
    <string name="fragment_add_task_name">Task Name</string>
    <string name="fragment_add_description_name">Task Description</string>
    <string name="fragment_add_task_completed">Completed</string>
    <string name="fragment_add_task_add_task">Add Task</string>
    <string name="fragment_create_task_toast">Cannot enter a task with an empty title</string>

    <!-- Fragment EditTask -->
    <string name="fragment_edit_task_update_task">Update Task</string>
    <string name="fragment_edit_task_toolbar_title">Todo: Edit </string>

    <!-- Lorem, for testing -->
    <string name="lorem_ipsum_small">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam efficitur felis nunc, vitae sollicitudin lectus volutpat et. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus elementum risus felis, quis venenatis urna condimentum id. Etiam dictum felis ac nulla accumsan finibus. Cras euismod, orci nec fermentum.</string>

    <!-- Recycler -->
    <string name="recycler_item_task_description">Description:</string>
    <string name="recycler_item_task_delete_task">Delete Task</string>

    <!-- Menu -->
    <string name="menu_show_finished">Show Finished</string>
    <string name="menu_remove_all">Remove All</string>
    <string name="menu_remove_finished">Remove Finished Tasks</string>
    <string name="menu_collapse_all">Collapse All</string>
    <string name="menu_expand_all">Expand All</string>

    <!-- Misc -->
    <string name="todo">TODO</string>

</resources>