<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu">
    <group android:checkableBehavior="all">

        <item
            android:id="@+id/menu_show_finished"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_show_finished"/>

    </group>

    <item android:id="@+id/menu_toggle_all"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_collapse_all"
        />

    <item android:id="@+id/menu_remove_finished"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_remove_finished" />

    <item android:id="@+id/menu_remove_all"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_remove_all" />
</menu>
