<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <CheckBox
        android:id="@+id/recycler_item_task_entry_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:minWidth="0dp"
        android:minHeight="0dp" />

    <TextView
        android:id="@+id/recycler_item_task_entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/recycler_item_task_entry_done"
        android:layout_alignBottom="@+id/recycler_item_task_entry_done"
        android:layout_toStartOf="@+id/recycler_item_task_entry_expand_button"
        android:layout_toEndOf="@id/recycler_item_task_entry_done"
        android:ellipsize="end"
        android:gravity="center|start"
        android:maxLines="1"
        android:textSize="16sp"
        tools:text="@string/lorem_ipsum_small" />

    <ImageButton
        android:id="@+id/recycler_item_task_entry_expand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/recycler_item_task_entry_done"
        android:layout_alignBottom="@+id/recycler_item_task_entry_done"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        android:contentDescription="@string/todo"
        />

    <LinearLayout
        android:id="@+id/recycler_item_task_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_item_task_entry_title"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        >

        <TextView
            android:id="@+id/recycler_item_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"

            android:text="@string/recycler_item_task_description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/recycler_item_task_description_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:visibility="visible"
            tools:text="@string/lorem_ipsum_medium" />

        <ImageButton
            android:id="@+id/recycler_item_task_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/recycler_item_task_delete_task"
            android:visibility="visible"
            app:srcCompat="@android:drawable/ic_delete" />
    </LinearLayout>

    <View
        android:id="@+id/recycler_item_task_divider"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:layout_below="@+id/recycler_item_task_horizontal_layout"
        android:background="?android:attr/listDivider" />


</RelativeLayout>