<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_create_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.MaterialComponents.Light.DarkActionBar"
            app:title="@string/app_fragment_add_task_name" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_create_task_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_create_task_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_add_task_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:labelFor="@id/fragment_add_task_name_field"
                    android:text="@string/fragment_add_task_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="24dp" />

                <EditText
                    android:id="@+id/fragment_add_task_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:text=""
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/activity_add_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fragment_add_description_name"
                    android:labelFor="@id/fragment_add_task_description_field"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/fragment_add_task_description_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:text=""
                    android:gravity="top"
                    android:autofillHints="" />

                <CheckBox
                    android:id="@+id/fragment_add_task_completed_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fragment_add_task_completed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large">

                </CheckBox>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/fragment_create_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/fragment_add_task_add_task"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>