<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_to_do_main_menu_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_to_do_main_menu_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                app:popupTheme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:title="@string/app_fragment_main_name"
                />

            <TextView
                android:id="@+id/activity_main_empty_indicator_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_empty_indicator_text_view"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MainActivity" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_main_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_to_do_main_menu_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/fragment_main_add_task"
            android:src="@android:drawable/ic_input_add"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>